--- a/src/main/webapp/resources/css/sistema.css
+++ b/src/main/webapp/resources/css/sistema.css
@@ -18,3 +18,17 @@ header{
  	
  	box-shadow:0px 2px 2px #ccc;
 }
+
+header > div{
+	margin-left: 8px;
+}
+
+#conteudo{
+	padding: 0px 8px;
+}
+
+footer{
+	padding: 0px 8px;
+	margin-bottom: 10px;
+	
+}
