--- a/src/main/webapp/WEB-INF/template/layoutPadrao.xhtml
+++ b/src/main/webapp/WEB-INF/template/layoutPadrao.xhtml
@@ -7,7 +7,9 @@
 	  xmlns:f="http://java.sun.com/jsf/core">
 	<h:head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title><ui:insert name="titulo">Sistema de Pedidos de Venda</ui:insert></title>
+		<title>
+			<ui:insert name="titulo">Sistema de Pedidos de Venda</ui:insert>
+		</title>
 		<h:outputStylesheet library="css" name="sistema.css" />
 		<h:outputScript  library="js" name="jquery.maskMoney.js" />
 	</h:head>
@@ -20,11 +22,35 @@
 		</p:dialog>
 		
 		<header>
-			<div>
-				<h:link>
+			<div style="float:left">
+				<h:link outcome="/home">
 					<h:graphicImage library="imagens" name="logo-algaworks.png"/>
 				</h:link>
 			</div>
+			<div style="float:right; margin-right: 110px;">
+				<span style="float:left; height: 8px; line-height: 30px; margin-left: 60px;">
+					Olá Usuário!
+				</span>
+				<h:form style="display: inline-block;margin-left: 35px;">
+					<p:menubar styleClass="menu-sistema">
+						<p:submenu label="Cadastros">
+							<p:menuitem value="Clientes" />
+							<p:menuitem value="Usuários"/>
+							<p:separator />
+							<p:menuitem  value="Categorias"/>
+							<p:menuitem  value="Produtos" outcome="/produtos/PesquisaProdutos"/>
+						</p:submenu>
+						
+						<p:submenu label="Pedidos">
+							<p:menuitem value="Novo Pedido" outcome="/pedidos/CadastroPedidos"/>
+							<p:menuitem value="Pesquisa" outcome="/pedidos/PesquisaPedidos"/>
+						</p:submenu>
+						
+						<p:menuitem value="Sair" style="color: #ffffff !important;" />
+					</p:menubar>
+				</h:form>
+			</div>
+			<div style="clear: both;"></div>
 		</header>
 		
 		<div id="conteudo">
