--- a/src/main/webapp/WEB-INF/template/pedidos/CapaPedido.xhtml
+++ b/src/main/webapp/WEB-INF/template/pedidos/CapaPedido.xhtml
@@ -8,42 +8,56 @@
 		<p:panelGrid columns="4" style="width:100%; margin-top:20px;" columnClasses="rotulo, campo, rotulo, campo">
 			
 			<p:outputLabel value="Número:"/>
-			<h:outputText value="123"/>
+			<h:outputText value="#{cadastroPedidoBean.pedido.id}"/>
 
 			<p:outputLabel value="Data de criação:"/>
-			<h:outputText value="11/20/2015"/>
+			<h:outputText value="#{cadastroPedidoBean.pedido.dataCriacao}" >
+				<f:convertDateTime pattern="dd/MM/yyyy"/>
+			</h:outputText>
 						
 			<p:outputLabel value="Status:"/>
-			<h:outputText value="Orçamento:"/>
+			<h:outputText value="#{cadastroPedidoBean.pedido.status}"/>
 			
 			<p:outputLabel value="Vendedor: " for="vendedor" />
-			<p:selectOneMenu id="vendedor" style="width: auto;" >
+			<p:selectOneMenu id="vendedor" style="width: 200px;" value="#{cadastroPedidoBean.pedido.vendedor}" >
 				<f:selectItem itemLabel="Selecione"/>
-				<f:selectItem itemLabel="João da Silva Couves Júnior"/>
+				<f:selectItem itemLabel="João da Silva Couves Júnior" itemValue="João da Silva Couves Júnior"/>
 			</p:selectOneMenu>
 			
 			<p:outputLabel value="Cliente:" for="cliente"/>
-			<p:autoComplete id="cliente" size="40" dropdown="true" />
+			<p:autoComplete id="cliente" size="40" dropdown="true" value="#{cadastroPedidoBean.pedido.cliente}" />
 			
 			<p:outputLabel value="Forma de Pagamento: " for="formaPagamento" />
-			<p:selectOneMenu id="formaPagamento" style="width: 100px;">
+			<p:selectOneMenu id="formaPagamento" style="width: 200px;" value="#{cadastroPedidoBean.pedido.formaPagamento}">
 				<f:selectItem itemLabel="Selecione"/>
-				<f:selectItem itemLabel="cartão de crédito"/>
-				<f:selectItem itemLabel="cartão de débito"/>
-				<f:selectItem itemLabel="Ávista"/>
+				<f:selectItem itemLabel="cartão de crédito" itemValue="CARTAO_CREDITO"/>
+				<f:selectItem itemLabel="cartão de débito" itemValue="CARTAO_DEBITO"/>
+				<f:selectItem itemLabel="Ávista" itemValue="DINHEIRO"/>
+				<f:selectItem itemLabel="Cheque" itemValue="CHEQUE"/>
+				<f:selectItem itemLabel="Boleto Bancário" itemValue="BOLETO_BANCARIO"/>
+				<f:selectItem itemLabel="Depósito Bancário" itemValue="DEPOSITO_BANCARIO"/>
 			</p:selectOneMenu>
 			
 			<p:outputLabel value="Valor do frete:" for="valorFrete"/>
-			<p:inputText id="valorFrete" size="10" maxlength="10"/>
+			<p:inputText id="valorFrete" size="10" maxlength="10" styleClass="moeda" 
+				value="#{cadastroPedidoBean.pedido.valorFrete}">
+				<f:convertNumber minFractionDigits="2" maxFractionDigits="2"/>
+			</p:inputText>
 			
 			<p:outputLabel value="SubTotal:" style="font-weight: bold;"/>
 			<h:outputText value="R$ 0,00" style="font-weight: bold;" id="subtotal"/>
 			
 			<p:outputLabel value="Valor de desconto:" for="valorDesconto"/>
-			<p:inputText id="valorDesconto" size="10" maxlength="10" />
+			<p:inputText id="valorDesconto" size="10" maxlength="10" styleClass="moeda" 
+				value="#{cadastroPedidoBean.pedido.valorDesconto}" >
+				<f:convertNumber maxFractionDigits="2" minFractionDigits="2"/>
+			</p:inputText>
 			
 			<p:outputLabel value="Total do Pedido:" style="font-weight: bold; font-size: 1.1em"/>
-			<h:outputText value="R$ 0,00" style="font-weight: bold;  font-size: 1.1em" id="totalPedido"/>	
+			<h:outputText  style="font-weight: bold;  font-size: 1.1em" 
+				id="totalPedido"  value="#{cadastroPedidoBean.pedido.valorTotal}" >
+				<f:convertNumber type="currency" />
+			</h:outputText>	
 		</p:panelGrid>
     </div>	
  </ui:composition>
