--- a/src/main/webapp/WEB-INF/template/pedidos/DadosEntregaPedido.xhtml
+++ b/src/main/webapp/WEB-INF/template/pedidos/DadosEntregaPedido.xhtml
@@ -1,4 +1,4 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+	<ui:composition xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:ui="http://java.sun.com/jsf/facelets"
@@ -8,28 +8,29 @@
 	<p:panelGrid columns="4" style="width: 100%" columnClasses="rotulo, campo, rotulo, campo">
 		
 		<p:outputLabel value="Data de entrega:" for="dataEntrega"/>
-		<p:calendar id="dataEntrega" pattern="dd/MM/yyyy" size="10"/>
+		<p:calendar id="dataEntrega" pattern="dd/MM/yyyy" size="10"
+				value="#{cadastroPedidoBean.pedido.dataEntrega}"/>
 		
 		<p:spacer />
 		<p:spacer />
 		
 		<p:outputLabel value="Logradouro:" for="entregaLogradouro"/>
-		<p:inputText id="entregaLogradouro" size="50"/>
+		<p:inputText id="entregaLogradouro" size="50" value="#{cadastroPedidoBean.pedido.enderecoEntrega.logradouro}"/>
 		
 		<p:outputLabel value="Número:" for="numero"/>
-		<p:inputText id="numero" size="5"/>
+		<p:inputText id="numero" size="5" value="#{cadastroPedidoBean.pedido.enderecoEntrega.numero}"/>
 		
 		<p:outputLabel value="Complemento:" for="entregaComplemento"/>
-		<p:inputText id="entregaComplemento" size="50"/>
+		<p:inputText id="entregaComplemento" size="50" value="#{cadastroPedidoBean.pedido.enderecoEntrega.complemento}"/>
 		
 		<p:outputLabel value="Cidade:" for="entregaCidade"/>
-		<p:inputText id="entregaCidade" size="20"/>
+		<p:inputText id="entregaCidade" size="20" value="#{cadastroPedidoBean.pedido.enderecoEntrega.cidade}"/>
 		
 		<p:outputLabel value="Estado:" for="entregaEstado"/>
-		<p:inputText id="entregaEstado" size="20"/>
+		<p:inputText id="entregaEstado" size="20" value="#{cadastroPedidoBean.pedido.enderecoEntrega.uf}"/>
 		
 		<p:outputLabel value="Cep:" for="entregaCep"/>
-		<p:inputText id="entregaCep" size="10"/>
+		<p:inputText id="entregaCep" size="10" value="#{cadastroPedidoBean.pedido.enderecoEntrega.cep}"/>
 		
 	</p:panelGrid>
     	
