--- a/src/main/webapp/WEB-INF/template/pedidos/ObservacaoPedido.xhtml
+++ b/src/main/webapp/WEB-INF/template/pedidos/ObservacaoPedido.xhtml
@@ -5,6 +5,6 @@
     xmlns:p="http://primefaces.org/ui">
     
 	<h:panelGroup layout="block" style="padding-right: 10px">
-		<p:inputTextarea rows="10" style="width: 100%"/>
+		<p:inputTextarea rows="10" style="width: 100%" value="#{cadastroPedidoBean.pedido.observacao}"/>
     </h:panelGroup>	 
  </ui:composition>
