Implementação do cadastro de pedidos

--- a/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
+++ b/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
@@ -8,7 +8,8 @@
 		<p:toolbar style="margin-top:20px;">
     		<p:toolbarGroup styleClass="toobarStyle">
     			<p:button value="Novo" outcome="/pedidos/CadastroPedidos"/>
-    			<p:commandButton value="Salvar" action="#{cadastroPedidoBean.salvar}"/>
+    			<p:commandButton value="Salvar" action="#{cadastroPedidoBean.salvar}"
+    				update="@form"/>
     		</p:toolbarGroup>
     			
     		<p:toolbarGroup align="right" styleClass="toobarStyle">
