--- a/src/main/webapp/WEB-INF/template/pedidos/CapaPedido.xhtml
+++ b/src/main/webapp/WEB-INF/template/pedidos/CapaPedido.xhtml
@@ -1,63 +1,84 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:ui="http://java.sun.com/jsf/facelets"
-    xmlns:p="http://primefaces.org/ui">
-    
-	<div class="ui-fluid" >
-		<p:panelGrid columns="4" style="width:100%; margin-top:20px;" columnClasses="rotulo, campo, rotulo, campo">
-			
-			<p:outputLabel value="Número:"/>
-			<h:outputText value="#{cadastroPedidoBean.pedido.id}"/>
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
 
-			<p:outputLabel value="Data de criação:"/>
-			<h:outputText value="#{cadastroPedidoBean.pedido.dataCriacao}" >
-				<f:convertDateTime pattern="dd/MM/yyyy"/>
+	<div class="ui-fluid">
+		<p:panelGrid columns="4" style="width:100%; margin-top:20px;"
+			columnClasses="rotulo, campo, rotulo, campo">
+
+			<p:outputLabel value="Número:"
+				rendered="#{cadastroPedidoBean.pedido.existente}" />
+			<h:outputText value="#{cadastroPedidoBean.pedido.id}"
+				rendered="#{cadastroPedidoBean.pedido.existente}" />
+
+			<p:outputLabel value="Data de criação:"
+				rendered="#{cadastroPedidoBean.pedido.existente}" />
+			<h:outputText value="#{cadastroPedidoBean.pedido.dataCriacao}"
+				rendered="#{cadastroPedidoBean.pedido.existente}">
+				<f:convertDateTime pattern="dd/MM/yyyy" />
 			</h:outputText>
-						
-			<p:outputLabel value="Status:"/>
-			<h:outputText value="#{cadastroPedidoBean.pedido.status}"/>
-			
+
+			<p:outputLabel value="Status:" />
+			<h:outputText value="#{cadastroPedidoBean.pedido.status.descricao}" />
+
 			<p:outputLabel value="Vendedor: " for="vendedor" />
-			<p:selectOneMenu id="vendedor" style="width: 200px;" value="#{cadastroPedidoBean.pedido.vendedor}" >
-				<f:selectItem itemLabel="Selecione"/>
-				<f:selectItem itemLabel="João da Silva Couves Júnior" itemValue="João da Silva Couves Júnior"/>
+			<p:selectOneMenu id="vendedor" style="width: 200px;"
+				value="#{cadastroPedidoBean.pedido.vendedor}">
+				<f:selectItem itemLabel="Selecione" />
+				<f:selectItems value="#{cadastroPedidoBean.vendedores}"
+					var="vendedores" itemValue="#{vendedores}"
+					itemLabel="#{vendedores.nome}" />
 			</p:selectOneMenu>
-			
-			<p:outputLabel value="Cliente:" for="cliente"/>
-			<p:autoComplete id="cliente" size="40" dropdown="true" value="#{cadastroPedidoBean.pedido.cliente}" />
-			
+
+			<p:outputLabel value="Cliente:" for="cliente" />
+			<p:autoComplete id="cliente" size="40" dropdown="true"
+				value="#{cadastroPedidoBean.pedido.cliente}" minQueryLength="3"
+				completeMethod="#{cadastroPedidoBean.completarCliente}"
+				var="cliente" itemValue="#{cliente}" itemLabel="#{cliente.nome}"
+				forceSelection="true" />
+
 			<p:outputLabel value="Forma de Pagamento: " for="formaPagamento" />
-			<p:selectOneMenu id="formaPagamento" style="width: 200px;" value="#{cadastroPedidoBean.pedido.formaPagamento}">
-				<f:selectItem itemLabel="Selecione"/>
-				<f:selectItem itemLabel="cartão de crédito" itemValue="CARTAO_CREDITO"/>
-				<f:selectItem itemLabel="cartão de débito" itemValue="CARTAO_DEBITO"/>
-				<f:selectItem itemLabel="Ávista" itemValue="DINHEIRO"/>
-				<f:selectItem itemLabel="Cheque" itemValue="CHEQUE"/>
-				<f:selectItem itemLabel="Boleto Bancário" itemValue="BOLETO_BANCARIO"/>
-				<f:selectItem itemLabel="Depósito Bancário" itemValue="DEPOSITO_BANCARIO"/>
+			<p:selectOneMenu id="formaPagamento" style="width: 200px;"
+				value="#{cadastroPedidoBean.pedido.formaPagamento}">
+				<f:selectItem itemLabel="Selecione" />
+				<f:selectItems value="#{cadastroPedidoBean.formasPagamento}"
+					var="pagamento" itemValue="#{pagamento}"
+					itemLabel="#{pagamento.descricao}" />
 			</p:selectOneMenu>
-			
-			<p:outputLabel value="Valor do frete:" for="valorFrete"/>
-			<p:inputText id="valorFrete" size="10" maxlength="10" styleClass="moeda" 
-				value="#{cadastroPedidoBean.pedido.valorFrete}">
-				<f:convertNumber minFractionDigits="2" maxFractionDigits="2"/>
+
+			<p:outputLabel value="Valor do frete:" for="valorFrete" />
+			<p:inputText id="valorFrete" size="10" maxlength="10"
+				styleClass="moeda" value="#{cadastroPedidoBean.pedido.valorFrete}">
+				<f:convertNumber minFractionDigits="2" maxFractionDigits="2" />
+				
+				<p:ajax event="change" process="@this" update="totalPedido"
+					listener="#{cadastroPedidoBean.recalcularPedido}"/>
 			</p:inputText>
-			
-			<p:outputLabel value="SubTotal:" style="font-weight: bold;"/>
-			<h:outputText value="R$ 0,00" style="font-weight: bold;" id="subtotal"/>
-			
-			<p:outputLabel value="Valor de desconto:" for="valorDesconto"/>
-			<p:inputText id="valorDesconto" size="10" maxlength="10" styleClass="moeda" 
-				value="#{cadastroPedidoBean.pedido.valorDesconto}" >
-				<f:convertNumber maxFractionDigits="2" minFractionDigits="2"/>
-			</p:inputText>
-			
-			<p:outputLabel value="Total do Pedido:" style="font-weight: bold; font-size: 1.1em"/>
-			<h:outputText  style="font-weight: bold;  font-size: 1.1em" 
-				id="totalPedido"  value="#{cadastroPedidoBean.pedido.valorTotal}" >
-				<f:convertNumber type="currency" />
+
+			<p:outputLabel value="SubTotal:" style="font-weight: bold;" />
+			<h:outputText value="#{cadastroPedidoBean.pedido.valorSubTotal}" style="font-weight: bold;"
+				id="subtotal" >
+				<f:convertNumber type="currency"/>
 			</h:outputText>	
+
+			<p:outputLabel value="Valor de desconto:" for="valorDesconto" />
+			<p:inputText id="valorDesconto" size="10" maxlength="10"
+				styleClass="moeda"
+				value="#{cadastroPedidoBean.pedido.valorDesconto}">
+				<f:convertNumber maxFractionDigits="2" minFractionDigits="2" />
+				
+				<p:ajax event="change" process="@this" update="totalPedido"
+					listener="#{cadastroPedidoBean.recalcularPedido}"/>
+			</p:inputText>
+
+			<p:outputLabel value="Total do Pedido:"
+				style="font-weight: bold; font-size: 1.1em" />
+			<h:outputText style="font-weight: bold;  font-size: 1.1em"
+				id="totalPedido" value="#{cadastroPedidoBean.pedido.valorTotal}">
+				<f:convertNumber type="currency" />
+			</h:outputText>
 		</p:panelGrid>
-    </div>	
- </ui:composition>
+	</div>
+</ui:composition>
