--- a/src/main/webapp/WEB-INF/template/pedidos/ItensPedido.xhtml
+++ b/src/main/webapp/WEB-INF/template/pedidos/ItensPedido.xhtml
@@ -5,36 +5,55 @@
     xmlns:p="http://primefaces.org/ui">
     
 
-	<p:dataTable value="cadastroPedidoBean.itens" var="item" id="itensTable">
+	<p:dataTable value="#{cadastroPedidoBean.pedido.itemPedido}" var="item" id="tabelaItens">
 		<p:column headerText="SKU" style="text-align: center; width:100px">
-			<p:inputText size="8"/>
+			<h:outputText size="8" id="skuRender" value="#{item.produto.sku}" rendered="#{item.produtoAssociado}"/>
+			<p:inputText size="8" id="skuNotRender" value="#{cadastroPedidoBean.sku}" label="SKU"
+				 rendered="#{not item.produtoAssociado}">
+				 <p:ajax event="change" process="@this" update="tabelaItens :frmCadastro:totalPedido :frmCadastro:subtotal"
+				 	 listener="#{cadastroPedidoBean.carregarProdutoPorSku}" /> 
+			</p:inputText>
 		</p:column>
 		
 		<p:column headerText="Produto" >
-			<p:autoComplete styleClass="produto-tabela" style="width:99%"/>
+			
+			<h:outputText value="#{item.produto.nome}" rendered="#{item.produtoAssociado}"/>
+		
+			<p:autoComplete styleClass="produto-tabela" style="width:99%" 
+				value="#{cadastroPedidoBean.produtoLinhaEditavel}"
+				completeMethod="#{cadastroPedidoBean.completarProduto}" 
+				var="produto" itemLabel="#{produto.nome}" itemValue="#{produto}" 
+				forceSelection="true" rendered="#{not item.produtoAssociado}">
+				<p:ajax event="itemSelect" update="tabelaItens :frmCadastro:totalPedido :frmCadastro:subtotal" 
+					listener="#{cadastroPedidoBean.carregarProdutoLinhaEditavel}" />	 
+			</p:autoComplete>
 		</p:column>
 		
 		<p:column headerText="Valor Unitário" style="text-align: right; width:120px;">
-			<h:outputText value="R$ 0,00" />
+			<h:outputText value="#{item.produto.valorUnitario}" >
+				<f:convertNumber type="currency"/>
+			</h:outputText>
 		</p:column>
 		
 		<p:column headerText="Quantidade" style="text-align: right; width:120px;">
-			<p:inputText size="8" value="1"/>
+			<p:inputText size="8" value="#{item.quantidade}"/>
 		</p:column>
 		
 		<p:column headerText="Estoque" style="text-align: center; width:100px;">
-			<h:outputText value="0"/>
+			<h:outputText value="#{item.produto.quantidadeEstoque}"/>
 		</p:column>
 		
 		<p:column headerText="Valor Total" style="text-align: right; width:100px;">
-			<h:outputText value="R$ 0,00"/>
+			<h:outputText value="#{item.valorTotal}" >
+				<f:convertNumber type="currency"/>
+			</h:outputText>
 		</p:column>
 		
 		<p:columnGroup type="footer">
 			<p:row>
 				<p:column colspan="5" footerText="SubTotal: " style="text-align: right;"/>
-				<p:column footerText="R$ 0,00" style="text-align: right">
-					
+				<p:column footerText="#{cadastroPedidoBean.pedido.valorSubTotal}" style="text-align: right">
+		
 				</p:column>
 			</p:row>
 		</p:columnGroup>
