Lançando pedido como emitido.

--- a/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
+++ b/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
@@ -13,7 +13,8 @@
     		</p:toolbarGroup>
     			
     		<p:toolbarGroup align="right" styleClass="toobarStyle">
-    			<p:commandButton value="Emitir" />
+    			<p:commandButton value="Emitir" action="#{emissaoPedidoBean.emitirPedido}"
+    				process="@form" update="@form"/>
     			<p:commandButton value="Cancelar" />
     			<p:commandButton value="Enviar por E-mail" />
     			
