--- a/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
+++ b/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
@@ -15,7 +15,10 @@
     		<p:toolbarGroup align="right" styleClass="toobarStyle">
     			<p:commandButton value="Emitir" action="#{emissaoPedidoBean.emitirPedido}"
     				process="@form" update="@form"/>
-    			<p:commandButton value="Cancelar" />
+    			<p:commandButton value="Cancelar" actionListener="#{cancelamentoPedidoBean.cancelarPedido}" 
+    				process="@this" update="@form" >
+    				<p:confirm header="Confirmação" message="Você têm certeza que deseja cancelar este pedido?" icon="ui-icon-alert"/>	
+    			</p:commandButton>
     			<p:commandButton value="Enviar por E-mail" />
     			
     			<p:separator />
@@ -23,5 +26,10 @@
     			<p:button value="Pesquisa" outcome="/pedidos/PesquisaPedidos"/>
     		</p:toolbarGroup>
     	</p:toolbar>
+    	
+    	<p:confirmDialog global="true" showEffect="fade" hideEffect="fade" >
+	        <p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+	        <p:commandButton value="Não" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+	    </p:confirmDialog>
     	
  </ui:composition>
