Implementação da biblioteca de email.

--- a/src/main/webapp/WEB-INF/template/pedidos/CapaPedido.xhtml
+++ b/src/main/webapp/WEB-INF/template/pedidos/CapaPedido.xhtml
@@ -25,7 +25,8 @@
 
 			<p:outputLabel value="Vendedor: " for="vendedor" />
 			<p:selectOneMenu id="vendedor" style="width: 200px;"
-				value="#{cadastroPedidoBean.pedido.vendedor}">
+				value="#{cadastroPedidoBean.pedido.vendedor}"
+				disabled="#{cadastroPedidoBean.pedido.naoAlteravel}">
 				<f:selectItem itemLabel="Selecione" />
 				<f:selectItems value="#{cadastroPedidoBean.vendedores}"
 					var="vendedores" itemValue="#{vendedores}"
@@ -37,11 +38,12 @@
 				value="#{cadastroPedidoBean.pedido.cliente}" minQueryLength="3"
 				completeMethod="#{cadastroPedidoBean.completarCliente}"
 				var="cliente" itemValue="#{cliente}" itemLabel="#{cliente.nome}"
-				forceSelection="true" />
+				forceSelection="true" disabled="#{cadastroPedidoBean.pedido.naoAlteravel}"/>
 
 			<p:outputLabel value="Forma de Pagamento: " for="formaPagamento" />
 			<p:selectOneMenu id="formaPagamento" style="width: 200px;"
-				value="#{cadastroPedidoBean.pedido.formaPagamento}">
+				value="#{cadastroPedidoBean.pedido.formaPagamento}"
+				disabled="#{cadastroPedidoBean.pedido.naoAlteravel}">
 				<f:selectItem itemLabel="Selecione" />
 				<f:selectItems value="#{cadastroPedidoBean.formasPagamento}"
 					var="pagamento" itemValue="#{pagamento}"
@@ -50,7 +52,8 @@
 
 			<p:outputLabel value="Valor do frete:" for="valorFrete" />
 			<p:inputText id="valorFrete" size="10" maxlength="10"
-				styleClass="moeda" value="#{cadastroPedidoBean.pedido.valorFrete}">
+				styleClass="moeda" value="#{cadastroPedidoBean.pedido.valorFrete}"
+				disabled="#{cadastroPedidoBean.pedido.naoAlteravel}">
 				<f:convertNumber minFractionDigits="2" maxFractionDigits="2" />
 				
 				<p:ajax event="change" process="@this" update="totalPedido"
@@ -65,7 +68,7 @@
 
 			<p:outputLabel value="Valor de desconto:" for="valorDesconto" />
 			<p:inputText id="valorDesconto" size="10" maxlength="10"
-				styleClass="moeda"
+				styleClass="moeda" disabled="#{cadastroPedidoBean.pedido.naoAlteravel}"
 				value="#{cadastroPedidoBean.pedido.valorDesconto}">
 				<f:convertNumber maxFractionDigits="2" minFractionDigits="2" />
 				
