--- a/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
+++ b/src/main/webapp/WEB-INF/template/pedidos/BotoesPedido.xhtml
@@ -9,14 +9,14 @@
     		<p:toolbarGroup styleClass="toobarStyle">
     			<p:button value="Novo" outcome="/pedidos/CadastroPedidos"/>
     			<p:commandButton value="Salvar" action="#{cadastroPedidoBean.salvar}"
-    				update="@form"/>
+    				update="@form" disabled="#{cadastroPedidoBean.pedido.naoAlteravel}"/>
     		</p:toolbarGroup>
     			
     		<p:toolbarGroup align="right" styleClass="toobarStyle">
     			<p:commandButton value="Emitir" action="#{emissaoPedidoBean.emitirPedido}"
-    				process="@form" update="@form"/>
+    				process="@form" update="@form" disabled="#{cadastroPedidoBean.pedido.naoEmissivel}"/>
     			<p:commandButton value="Cancelar" actionListener="#{cancelamentoPedidoBean.cancelarPedido}" 
-    				process="@this" update="@form" >
+    				process="@this" update="@form" disabled="#{cadastroPedidoBean.pedido.naoCancelavel}" >
     				<p:confirm header="Confirmação" message="Você têm certeza que deseja cancelar este pedido?" icon="ui-icon-alert"/>	
     			</p:commandButton>
     			<p:commandButton value="Enviar por E-mail" />
