--- a/src/main/webapp/WEB-INF/template/layoutPadrao.xhtml
+++ b/src/main/webapp/WEB-INF/template/layoutPadrao.xhtml
@@ -47,7 +47,7 @@
 					<p:menuitem value="Novo pedido" outcome="/pedidos/CadastroPedidos" />
 					<p:menuitem value="Pesquisa" outcome="/pedidos/PesquisaPedidos" />
 				</p:submenu>
-				<p:menuitem value="Sair" />
+				<p:menuitem value="Sair" url="/j_spring_security_logout" />
 			</p:menubar>
 		</h:form>
 	</div>
