--- a/src/main/webapp/WEB-INF/template/layoutPadrao.xhtml
+++ b/src/main/webapp/WEB-INF/template/layoutPadrao.xhtml
@@ -24,7 +24,7 @@
 
 	<header>
 	<div style="float: left">
-		<h:link outcome="/index">
+		<h:link outcome="/Home">
 			<h:graphicImage library="imagens" name="logo-algaworks.png" />
 		</h:link>
 	</div>
@@ -32,7 +32,7 @@
 	<div style="float: right; margin-right: 110px">
 		<span
 			style="float: left; height: 30px; line-height: 30px; margin-right: 60px">
-			Olá usuário! </span>
+			Olá #{seguranca.nomeUsuario}! </span>
 
 		<h:form style="display: inline-block">
 			<p:menubar styleClass="menu-sistema">
